# unitysvc-services

./: .readthedocs.yaml  CODE_OF_CONDUCT.md  CONTRIBUTING.md  HISTORY.md  LICENSE  MANIFEST.in  PR.md  README.md  TEST_USVC_ADMIN.md  USVC_CLI.md  failed_27aabf49-0d24-4fd9-995d-c066bea14a2c_code_example_gateway.env  failed_27aabf49-0d24-4fd9-995d-c066bea14a2c_code_example_gateway.err  failed_27aabf49-0d24-4fd9-995d-c066bea14a2c_code_example_gateway.py  justfile  mkdocs.yml  pyproject.toml  run_all_tests.sh
.claude/: settings.local.json
.github/: ISSUE_TEMPLATE.md
.github/workflows/: publish.yml  test.yml
.serena/: project.yml
docs/: api-reference.md  cli-reference.md  code-examples.md  contributing.md  data-structure.md  development.md  documenting-services.md  file-schemas.md  getting-started.md  index.md  installation.md  pricing.md  seller-lifecycle.md  service-types.md  usage.md  workflows.md
docs/tech-notes/: user-access-interface-template.md
scripts/: README.md  update_schema.py
src/unitysvc_services/: __init__.py  api.py  cli.py  data.py  data_builder.py  example.py  format_data.py  interactive_prompt.py  lifecycle.py  list.py  markdown.py  model_data.py  output.py  populate.py  promotions.py  publisher.py  query.py  scaffold.py  services.py  standalone.py  template_populate.py  test.py  test_runner.py  unpublisher.py  update.py  upload.py  utils.py  validator.py
src/unitysvc_services/models/: __init__.py  base.py  listing_data.py  listing_v1.py  offering_data.py  offering_v1.py  promotion_data.py  promotion_v1.py  provider_data.py  provider_v1.py  seller_data.py  seller_v1.py  service_data.py  service_group_data.py  service_group_v1.py  service_v1.py
src/unitysvc_services/schema/: README.md  base.json  listing_v1.json  offering_v1.json  promotion_v1.json  provider_v1.json  seller_v1.json  service_group_v1.json  service_v1.json
tests/: __init__.py  test_lifecycle.py  test_markdown.py  test_pricing.py  test_utils.py  test_validator.py
tests/example_data/: README.md  seller.json
tests/example_data/provider1/: provider.toml
tests/example_data/provider1/services/service1/: code-example.md  connectivity.sh  listing.toml  (+3 more)
tests/example_data/provider2/: provider.json  terms-of-service.md
(+5 files in other folders)
